--- a/part2/phonebook/src/index.css
+++ b/part2/phonebook/src/index.css
@@ -1,9 +1,19 @@
-.notification {
-    color: green;
-    background: lightgrey;
-    font-size: 17px;
-    border-style: solid;
-    border-radius: 5px;
-    padding: 10px;
-    margin-bottom: 10px;
-  }
+.announcement {
+  color: green;
+  background: lightgrey;
+  font-size: 17px;
+  border-style: solid;
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+.error {
+  color: red;
+  background: lightgrey;
+  font-size: 17px;
+  border-style: solid;
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 10px;
+}
